<resources>
    <string name="app_name">Student Bus Check-In</string>
    <string name="title_activity_settings">Settings</string>
    <string name="done">Done</string>
    <string name="next_name">Next Name</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="student_name">Student Name</string>
    <string name="teacher_sponsor">Teacher Sponsor</string>
    <string name="student_list">Student List</string>
    <string name="enter_names_here">Enter Names Here</string>
    <string name="enter_school_district">Enter School District</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_email_name">Email Address</string>
    <string name="pref_default_email">me@district.k12.in.us</string>
    <string name="pref_default_display_name">your name</string>
    <string name="pref_default_district_name">School District</string>
    <string name="remember_district_info">Remember District Info?</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enterNameText" />
    <string name="welcomeTitle">Welcome to Field Trip Check-In</string>
    <string name="enterTeacherName">enter teacher name</string>
    <string name="enterBusDriverName">enter bus driver name</string>
    <string name="doYouHaveAList">Do you have a list already?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="enterNamesHere">Enter Names Here</string>
    <string name="haveListTitleLabel">I have a list!</string>
    <string name="enterListId">Enter List ID</string>
    <string name="OR">OR</string>
    <string name="enterTripName">enter trip name</string>
    <string name="Settings">settings</string>
    <string name="settings2">Settings</string>
    <string name="teacherName">Teacher Name</string>
    <string name="schoolDistrict">School District</string>
    <string name="password">Password</string>
    <string name="studentDatabaseURL">List Location</string>
    <string name="enterSchoolDistrict">enter school district name</string>
    <string name="enterPassword">enter password</string>
    <string name="URLhint">www...</string>
    <string name="title_activity_student_list">StudentListActivity</string>
    <string name="student_schoool_id">School ID</string>

    <!--list item strings-->
    <string name="is_present_list_item">Present?</string>
    <string name="student_school_id_list_item">School ID, </string>
    <string name="student_name_list_item">Student Name, </string>


</resources>
