<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <CheckBoxPreference
        android:key="pref_remember_district_info"
        android:title="@string/remember_district_info"
        android:enabled="true"
        android:defaultValue="false"/>

    <EditTextPreference
        android:capitalize="words"
        android:dependency="pref_remember_district_info"
        android:defaultValue="@string/pref_default_email"
        android:key="email_name"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_email_name" />

    <EditTextPreference
        android:capitalize="words"
        android:dependency="pref_remember_district_info"
        android:defaultValue="@string/pref_default_district_name"
        android:inputType="textCapWords"
        android:key="district_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/enter_school_district" />
    <EditTextPreference
        android:capitalize="words"
        android:dependency="pref_remember_district_info"
        android:defaultValue="@string/URLhint"
        android:key="student_list_url"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/studentDatabaseURL" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


</PreferenceScreen>
