<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item">
   <!-- <ImageView
        android:id="@+id/student_photo_list_item"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />-->
    <TextView
        android:id="@+id/student_name_list_item"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/student_name_list_item"/>

    <TextView
        android:id="@+id/student_school_id_list_item"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent"
        android:text="@string/student_school_id_list_item"
        app:layout_constraintStart_toEndOf="@id/student_name_list_item"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/is_present_text_list_item"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/is_present_list_item"
        app:layout_constraintStart_toEndOf="@+id/student_school_id_list_item"
        android:layout_marginLeft="10dp"/>
    <CheckBox
        android:id="@+id/is_present_checkbox_list_item"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/is_present_text_list_item"
        app:layout_constraintEnd_toEndOf="parent"

        />

</android.support.constraint.ConstraintLayout>
