<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- <ImageView
        android:id="@+id/student_photo_list_item"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />-->
    <EditText
        android:id="@+id/student_name_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:hint="@string/student_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"

        />


    <EditText
        android:id="@+id/student_school_id_list_item"
        android:layout_width="@+id/student_name_list_item"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/student_schoool_id"
        android:hint="School ID"
        android:inputType="number"

        app:layout_constraintEnd_toEndOf="@+id/student_name_list_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_name_list_item" />

    <TextView
        android:id="@+id/is_present_text_list_item"
        android:layout_width="@+id/student_name_list_item"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Is present?"


        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/student_name_list_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_school_id_list_item" />
    />

    <CheckBox
        android:id="@+id/is_present_checkbox_list_item"
        android:layout_width="wrap_content"
        android:layout_height="@+id/is_present_text_list_item"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/is_present_text_list_item"
        app:layout_constraintTop_toTopOf="@+id/is_present_text_list_item"

        />

    <Button
        android:id="@+id/next_button_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="89dp"
        android:text="@string/next_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/is_present_checkbox_list_item" />

    <Button
        android:id="@+id/done_button_list_item"
        android:layout_width="@+id/next_button_list_item"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintStart_toStartOf="@+id/next_button_list_item"
        app:layout_constraintTop_toBottomOf="@+id/next_button_list_item"
        app:layout_constraintEnd_toEndOf="@+id/next_button_list_item"
        />

</android.support.constraint.ConstraintLayout>
